# NovelWriter

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LSP_ARCHITECTURE_REDESIGN.md  P0_IMPROVEMENTS.md  PUSH_TO_GITHUB.md  README.md  analyze_modal.py  pyproject.toml  pytest.ini  test_lsp_connection.md
NovelWriter/LSP/: LSP_ARCHITECTURE_REDESIGN.md  README.md  pyproject.toml  pytest.ini  requirements.txt
NovelWriter/LSP/novelwriter_lsp/: __main__.py  index.py  parser.py  server.py  types.py
Writer/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  install_deps.bat  novel-agent.bat  package-lock.json  pyproject.toml  quick_status.py  register_chapters.py  run_app.py  run_chat.bat  run_chat_wt.bat
Writer/.cache/creative/: outline_97a6e2d5a65156d9.json
Writer/data/: glossary.json  users.json
Writer/data/learning/: patterns.json  preferences.json
Writer/data/studio/: settings.json  state.json
Writer/docs/: CHANGELOG.md  CHAT_UI_DESIGN.md  DEVELOPMENT.md  DOCS_INDEX.md  KNOWLEDGE_GRAPH_CLEANUP.md  OPTIMIZED_MODEL_CONFIG.md  PROJECT_OVERVIEW.md  QUICKSTART.md  WRITER_STUDIO_DESIGN.md  english_model_comparison.md
Writer/scripts/: benchmark_nlp.py  complete_novel_generation.py  consistency_check.py  continue_timetravel_novel.py  demo_t27_autofix.py  generate_30_chapter_novel.py  generate_chapters_4_to_10.py  generate_novel.py  generate_timetravel_novel.py  migrate_to_neo4j.py  migrate_yaml_to_markdown.py  phase2-1-modify-base-writer.py  phase3_demo.py  production_validation.py  run_daily.py  test_inventory_updater.py  verify_migration.py
Writer/src/: __init__.py  cli_extensions.py  main.py
Writer/src/agents/: __init__.py  agent_collaborator.py  base.py  chapter_hook.py  character.py  comment_analyzer.py  content_pipeline.py  editor.py  emotional_arc.py  engagement.py  market_research.py  orchestrator.py  plot.py  project_planner.py  publisher.py  reader_persona.py  review.py  worldbuilding.py
Writer/src/api/: __init__.py  dependencies.py  main.py  rate_limit.py
Writer/src/crawlers/: __init__.py  base.py  chinese_platforms.py  google_trends.py  playwright_crawler.py  royalroad.py  wattpad.py
Writer/src/db/: __init__.py  chroma_client.py  embedding_generator.py  neo4j_models.py  pinecone_client.py  postgres_client.py  vector_store_factory.py
Writer/src/deployment/: __init__.py  config.py
Writer/src/export/: __init__.py  base.py  epub_exporter.py  pdf_exporter.py  txt_exporter.py
Writer/src/learning/: __init__.py  calibrated_reviewer.py
Writer/src/llm/: __init__.py  base.py  deepseek.py  final_model_config.py  gemini.py  glm.py  glm_image.py  infini.py  kimi.py  laozhang_config.py  model_router.py  rate_limited.py  trinity_router_example.py
Writer/src/memory/: __init__.py  base.py  character_memory.py  composite_memory.py  compression.py  memsearch_adapter.py  plot_memory.py  world_memory.py
Writer/src/monitoring/: __init__.py  exporters.py  health.py
Writer/src/novel/: __init__.py  auto_fixer.py  chapter_generator.py  chapter_summarizer.py  character_knowledge.py  character_profile.py  character_promotion.py  character_selector.py  cognitive_graph.py  cognitive_graph_extended.py  compression.py  consistency_verifier.py  constitution.py  entity_extractor.py  fact_database.py  fact_injector.py  global_fact_layer.py  glossary.py  hallucination_detector.py  hierarchical_state.py  inventory_updater.py  knowledge_graph.py  outline_generator.py  outline_validator.py  performance_benchmark.py  reference_validator.py  relation_inference.py  repair_history.py  schemas.py  simple_glossary.py  structured_input.py  suggestion_engine.py  summaries.py  summary_manager.py  tier_template.py  timeline_manager.py  timeline_validator.py  validation_orchestrator.py  validators.py  version_control.py
Writer/src/publishing/: __init__.py  publisher_manager.py  royalroad_publisher.py  wattpad_publisher.py
Writer/src/scheduler/: __init__.py  tasks.py
Writer/src/studio/: __init__.py  i18n.py
Writer/src/utils/: __init__.py  batch.py  cache.py  config.py  rate_limiter.py
Writer/tests/: __init__.py  conftest.py  conftest_qa.py  test_nlp.py  test_qa_fixtures.py  test_qa_infrastructure.py
Writer/tests/api/: conftest.py  test_agents.py  test_chapters.py  test_characters.py  test_main.py  test_monitoring.py  test_projects.py  test_publishing.py
Writer/tests/db/: test_neo4j_client.py
Writer/tests/integration/: test_100_chapter_hierarchical.py  test_100k_generation.py  test_200_chapter_scaling.py  test_30_chapter_continuity.py  test_continuity_validation.py  test_memory_benchmark.py  test_real_llm_smoke.py  test_validation_integration.py
Writer/tests/novel/: test_auto_fixer.py  test_autofix_enhanced.py  test_character_profile.py  test_character_promotion.py  test_checkpointing.py  test_cognitive_graph.py  test_cognitive_graph_extended.py  test_continuity.py  test_global_fact_layer.py  test_hierarchical_state.py  test_knowledge_graph.py  test_knowledge_graph_cleanup.py  test_outline_generator.py  test_outline_manager.py  test_performance_benchmark.py  test_state_detection.py  test_suggestion_engine.py  test_summary_integration.py  test_tier_template.py  test_timeline_manager.py  test_validators.py
Writer/tests/performance/: test_knowledge_graph_performance.py  test_vector_store_optimization.py
Writer/tests/profiling/: 100k_benchmark.md  test_tiktoken_accuracy.py
Writer/tests/test_agents/: test_character.py  test_comment_analyzer.py  test_market_research.py  test_orchestrator.py  test_writers.py
Writer/tests/test_deployment/: test_config.py
Writer/tests/test_integration/: __init__.py  test_full_workflow.py
Writer/tests/test_llm/: test_deepseek.py
Writer/tests/test_monitoring/: test_alerts.py
jrob/: .gitignore  AGENTS.md  CMakeLists.txt  README.md
jrob/.beads/: metadata.json
jrob/examples/: hello_robot.cpp
jrob/src/: robot.cpp
jrob/tests/: main_test.cpp  test_physics_placeholder.cpp  test_physics_world.cpp  test_robot.cpp
novelwriter-shared/: pyproject.toml
novelwriter-shared/tests/: test_models.py
(+832 files in other folders)
