[project]
name = "novel-agent-system"
version = "0.1.0"
description = "AI-powered novel writing and publishing system with specialized agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Novel Agent System Team"}
]
keywords = ["ai", "novel", "writing", "agents", "llm"]

dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "flet>=0.25.0",
    "memsearch[local]>=0.1.6",
    "pinecone>=3.0.0",
    "sentence-transformers>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
novel-agent = "src.main:cli"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "benchmark: marks tests as benchmark tests",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
